# android_extras

./: .classpath  .gitignore  .project  CHANGELOG.rst  CMakeLists.txt  build.gradle  package.xml  settings.gradle
android_all_sensors_driver/: build.gradle
android_all_sensors_driver/src/main/: AndroidManifest.xml
android_all_sensors_driver/src/main/java/org/ros/android/android_all_sensors_driver/: CameraPublisher.java  FluidPressurePublisher.java  IlluminancePublisher.java  ImuPublisher.java  MagneticFieldPublisher.java  MainActivity.java  MasterChooser.java  NavSatFixPublisher.java  TemperaturePublisher.java
android_all_sensors_driver/src/main/res/layout/: my_master_chooser.xml
android_all_sensors_driver/src/main/res/menu/: activity_main.xml
android_all_sensors_driver/src/main/res/values/: strings.xml
android_all_sensors_driver/src/main/res/xml/: preferences.xml
android_barcode_scanner/: .project  AndroidManifest.xml  CMakeLists.txt  Readme.rst  package.xml
android_gingerbread_extras/src/main/: AndroidManifest.xml
android_master_browser/: .project  AndroidManifest.xml  CMakeLists.txt  build.gradle  package.xml  package.xml.DISABLED  project.properties
android_master_browser/res/values/: strings.xml
android_master_browser/src/main/: AndroidManifest.xml
android_master_browser/src/main/java/com/github/rosjava/android/android_master_browser/: DiscoveryAdapter.java  DiscoveryHandler.java  DiscoverySetup.java  Logger.java  MasterBrowser.java
android_master_browser/src/main/res/layout/: main.xml
android_master_browser/src/org/ros/android/zeroconf/master_browser/: DiscoveryAdapter.java  DiscoveryHandler.java  DiscoverySetup.java  Logger.java  MasterBrowser.java
android_tutorial_cv_bridge_CompressedImage/src/main/: AndroidManifest.xml
android_tutorial_cv_bridge_CompressedImage/src/main/java/com/github/rosjava/android_extras/android_tutorial_cv_bridge/: MainActivityCompressed.java
android_tutorial_cv_bridge_CompressedImage/src/main/res/values/: strings.xml
android_tutorial_cv_bridge_CompressedImage_javacv/: build.gradle
android_tutorial_cv_bridge_CompressedImage_javacv/src/main/: AndroidManifest.xml
android_tutorial_cv_bridge_CompressedImage_javacv/src/main/java/com/github/rosjava/android_extras/android_tutorial_cv_bridge/: MainActivityCompressedJavacv.java
android_tutorial_cv_bridge_CompressedImage_javacv/src/main/res/values/: strings.xml
android_tutorial_cv_bridge_Image/: build.gradle
android_tutorial_cv_bridge_Image/src/main/: AndroidManifest.xml
android_tutorial_cv_bridge_Image/src/main/java/com/github/rosjava/android_extras/android_tutorial_cv_bridge/: MainActivity.java
android_tutorial_cv_bridge_Image/src/main/res/values/: strings.xml
android_tutorial_cv_bridge_Image_javacv/: build.gradle
android_tutorial_cv_bridge_Image_javacv/src/main/: AndroidManifest.xml
android_tutorial_cv_bridge_Image_javacv/src/main/java/com/github/rosjava/android_extras/android_tutorial_cv_bridge/: MainActivityJavacv.java
android_tutorial_cv_bridge_Image_javacv/src/main/res/values/: strings.xml
android_tutorial_hokuyo/: build.gradle
android_tutorial_hokuyo/src/main/: AndroidManifest.xml
android_tutorial_hokuyo/src/main/java/com/github/rosjava/android_extras/android_tutorial_hokuyo/: MainActivity.java
android_zxing/: build.gradle
android_zxing/src/main/java/com/google/zxing/: IntentResult.java
cv_bridge/: build.gradle
cv_bridge/src/main/: AndroidManifest.xml
cv_bridge/src/main/java/cv_bridge/: CvImage.java  Encoding.java  Format.java
gingerbread/: build.gradle
gingerbread/src/main/: AndroidManifest.xml
gingerbread/src/main/java/com/github/ros_java/android_extras/gingerbread/view/: BatteryLevelView.java
gingerbread/src/main/java/com/github/rosjava/android_extras/gingerbread/view/: BatteryLevelView.java
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
ros_master_browser/: Readme.rst  build.gradle
ros_master_browser/src/main/: AndroidManifest.xml
ros_master_browser/src/main/java/com/github/ros_java/android_extras/ros_master_browser/: DiscoveryAdapter.java  DiscoveryHandler.java  DiscoverySetup.java  Logger.java  MasterBrowser.java
ros_master_browser/src/main/java/com/github/rosjava/android_extras/ros_master_browser/: DiscoveryAdapter.java  DiscoveryHandler.java  DiscoverySetup.java  Logger.java  MasterBrowser.java
ros_master_browser/src/main/res/layout/: row_layout.xml
zxing/: build.gradle
zxing/src/main/: AndroidManifest.xml
zxing/src/main/java/com/google/zxing/: IntentIntegrator.java
