<?xml version="1.0"?>
<package>
  <name>android_extras</name>
  <version>0.1.0</version>
  <description>
    Various additional and useful general packages, but not core.
  </description>
  <url>http://ros.org/wiki/android_extras</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_tools</build_depend>
  <build_depend>android_core</build_depend>
  <build_depend>rosjava_jmdns_suite</build_depend>
</package>
