<?xml version="1.0"?>
<package>
  <name>android_extras</name>
  <version>0.1.4</version>
  <description>
    Various additional and useful general packages, but not core.
  </description>
  <url type="website">http://ros.org/wiki/android_extras</url>
  <url type="repository">https://github.com/rosjava/android_extras</url>
  <url type="bugtracker">https://github.com/rosjava/android_extras/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_extras</build_depend>
  <build_depend>android_core</build_depend>
  <build_depend>zeroconf_jmdns_suite</build_depend>
</package>
