<?xml version="1.0"?>
<package>
  <name>android_master_browser</name>
  <version>0.1.0</version>
  <description>An app for discovering ros masters by zeroconf.</description>

  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/android_master_browser</url>
  <url type="repository">https://github.com/ros-java/android_gingerbread_extras</url>
  <url type="bugtracker">https://github.com/ros-java/android_gingerbread_extras/issues</url>


  <author email="d.stonier@gmail.com">Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_tools</build_depend>
  <build_depend>android_gingerbread</build_depend>
  <build_depend>rosjava_jmdns</build_depend>
</package>
